--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -205,7 +205,7 @@ h5 {
 }
 
 /* TODO: Alla dessa borde göras till riktiga headers */
-.container_titletext, .heading, .variableselector_valuesselect_variabletitle > label, .about-table .accordion-body .header-text span {
+.container_titletext, .heading, .variableselector_valuesselect_variabletitle > label {
   @include h4;
 }
 
