--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -13,8 +13,7 @@
   
     padding: 0.75rem 0 0;
     font-weight: 700;
-    margin-bottom: 0.75rem;
-  
+    margin-bottom: 0;
   
     &:hover, &:focus {
       > .header-text > span, > .header-text  {
@@ -35,6 +34,11 @@
         text-decoration: none;
         cursor: default;
     }
+}
+
+.about-table .accordion-body .header-text span {
+    font-weight: 600;
+    font-size: 1rem;
 }
 
 .information_definitionlist .nested-accordion-body {
